# fastapi-service

./: .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  test_main.py
.github/workflows/: deploy.yml
